# ml-workshop-1

./: README.md  pyproject.toml
src/: mnist_model.pt  nn_model.py  nn_model_test.py
