[tool.poetry]
name = "workshop-01"
version = "0.1.0"
description = ""
authors = ["Lev Plotkin <{ID}+{username}@users.noreply.github.com>"]

readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
numpy = "^1.26.4"
torchvision = "^0.17.1"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
